# build-ship-dbg-wasm

./: .gitignore  CMakeLists.txt  README.md
npm_package/: app.js  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
npm_package/src/: index.ts
src/: CMakeLists.txt  main.cpp
web/: index.html  package-lock.json  package.json  webpack.config.js
web/src/: index.ts
